Update code for new Prometheus simpleclient version
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>